[tool.poetry]
name = "chess"
version = "0.1.0"
description = ""
authors = ["Maxim Britvin <maksbritvin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
