[tool.poetry]
name = "chess"
version = "0.1.0"
description = ""
authors = ["Maxim Britvin <maksbritvin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
pytest = "^7.4.2"
uvicorn = "^0.23.2"
ruff = "^0.0.287"
mypy = "^1.5.1"

[tool.ruff]
# base settings
line-length = 100
src = ["src"]
# rule settings
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
